force-app/main/default/objects/Future_Phase_Items__c/Future_Phase_Items__c.object-meta.xml
<CustomObject>
    <description>Created by: YB</description>
    <label>Future Phase Items</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Phase Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Future Phase Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>