force-app/main/default/objects/Future_Phase_Items__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalog_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Future Phase Items</relationshipLabel>
    <relationshipName>Future_Phase_Items</relationshipName>
    <type>Lookup</type>
</CustomField>