force-app/main/default/objects/Future_Phase_Items__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By:CMP Business Unit:BWTC Purpose:To place related list on Project record.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Future Phase Items</relationshipLabel>
    <relationshipName>Future_Phase_Items</relationshipName>
    <type>Lookup</type>
</CustomField>