force-app/main/default/objects/Future_Phase_Items__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: YB</description>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Future Phase Items</relationshipLabel>
    <relationshipName>Future_Phase_Items</relationshipName>
    <type>Lookup</type>
</CustomField>